force-app/main/default/objects/Intel_Job_Profession__c/Intel_Job_Profession__c.object-meta.xml
<CustomObject>
    <label>Intel Job Profession</label>
    <nameField>
        <displayFormat>IJP-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intel Job Professions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>