force-app/main/default/objects/Intel_Job_Profession__c/fields/external_Id__c.field-meta.xml
<CustomField>
    <fullName>external_Id__c</fullName>
    <externalId>true</externalId>
    <label>external Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>