force-app/main/default/objects/Intel_Job_Profession__c/fields/Profession_Name__c.field-meta.xml
<CustomField>
    <fullName>Profession_Name__c</fullName>
    <formula>Intel_Profession__r.Intel_Profession_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession Name</label>
    <type>Text</type>
</CustomField>