force-app/main/default/objects/Intel_Job_Profession__c/fields/Torc_Job_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Torc_Job_Opportunity__c</fullName>
    <label>Torc Job Opportunity</label>
    <referenceTo>Torc_Job_Opportunity__c</referenceTo>
    <relationshipLabel>Intel Job Professions</relationshipLabel>
    <relationshipName>Intel_Job_Professions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>